# open-paper-shelf

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  TODO.md  credentials.example.json  credentials.json  pyproject.toml
.github/workflows/: ci.yml  jules-review.yml
docs/superpowers/plans/: 2026-07-20-ci-precommit-fix.md
docs/superpowers/specs/: 2026-07-20-ci-precommit-fix-design.md  2026-07-20-repo-foundation-design.md
open-paper-shelf/src/: main.py
open-paper-shelf/src/backend/: drive.py  main.py
open-paper-shelf/src/frontend/: app.py
open-paper-shelf/src/tests/: conftest.py  test_backend.py  test_drive.py
